include all attendance changes and in progress create enrollment
